# La-Comarca

./: .gitignore
client/: .gitignore  angular.json  opencode.json  package-lock.json  package.json
client/openspec/changes/la-comarca-initial-modules/: design.md  proposal.md  tasks.md
client/src/: index.html  main.ts  styles.css
client/src/app/: app.config.ts  app.routes.ts  app.spec.ts
client/src/app/home/: home.component.html  home.component.ts
client/src/environments/: environment.prod.ts  environment.ts
server/: .gitignore  pyproject.toml  requirements.txt
server/migrations/: 001_id_generation.sql
server/src/: main.py
server/src/apis/: auth.py  categorias.py  checkout.py  clientes.py  clientes_empresa.py  comprobantes.py  inventario.py  pedidos.py  productos.py  usuarios.py
server/src/core/: config.py  database.py  dependencies.py  id_generator.py  security.py
server/src/repositories/: categoria.py  cliente.py  cliente_empresa.py  comprobante.py  direccion.py  inventario.py  pedido.py  producto.py  token.py  usuario.py
server/src/schemas/: auth.py  categoria.py  checkout.py  cliente.py  cliente_empresa.py  comprobante.py  direccion.py  inventario.py  pedido.py  producto.py  usuario.py
server/src/services/: auth.py  categoria.py  checkout.py  cliente.py  comprobante.py  email.py  inventario.py  nubefact.py  pedido.py  producto.py  usuario.py
src/: index.html
src/app/: app.config.ts  app.routes.ts  app.spec.ts
src/app/admin/models/: movimiento.model.ts  pedido-detalle.model.ts
src/app/contacto/components/: contacto.component.html
(+160 files in other folders)
