[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "uvicorn>=0.49.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pyjwt>=2.10",
    "bcrypt>=4.3",
    "python-dotenv>=1.1",
    "pydantic[email]>=2.13.4",
    "aiohttp>=3.11",
]
